--- a/index.html
+++ b/index.html
@@ -978,6 +978,7 @@
 </head>
 
 <body>
+  <!-- Visit My Website -->
   <div class="particles" id="particles"></div>
   <div class="container" id="main-container">
     <div class="profile-img-container">
@@ -1048,44 +1049,10 @@
       </div>
     </div>
 
-    <div class="mirror-container">
-      <a href="https://yourwebsite.com" class="link"><i class="fas fa-globe"></i> Visit My Website</a>
-      <div class="mirror-reflection"></div>
-    </div>
-
-    <!-- Portfolio Dropdown -->
-    <div class="mirror-container">
-      <div class="portfolio-dropdown">
-        <button class="portfolio-dropbtn"><i class="fas fa-briefcase"></i> Portfolio</button>
-        <div class="portfolio-dropdown-content">
-          <div class="portfolio-submenu">
-            <button class="portfolio-submenu-btn"><i class="fas fa-dumbbell"></i> Landing Pages for Fitness Coaches <i class="fas fa-caret-down"></i></button>
-            <div class="portfolio-submenu-content">
-              <a href="https://prityaa379.github.io/rahulfc/" target="_blank"><i class="fas fa-link"></i> Fitness Coach 1</a>
-              <a href="https://prityaa379.github.io/rahulfc/" target="_blank"><i class="fas fa-link"></i> Fitness Coach 2</a>
-              <a href="https://prityaa379.github.io/practice/" target="_blank"><i class="fas fa-link"></i> Fitness Coach</a>
-              <a href="https://prityaa379.github.io/rahulfc3/" target="_blank"><i class="fas fa-link"></i> Fitness Coach 4</a>
-              <a href="https://prityaa379.github.io/rahulfc4/" target="_blank"><i class="fas fa-link"></i> Fitness Coach 5</a>
-              <a href="https://prityaa379.github.io/rahulfc5/" target="_blank"><i class="fas fa-link"></i> Fitness PR</a>
-              <a href="https://prityaa379.github.io/rahulfc6/" target="_blank"><i class="fas fa-prity"></i>
-              <a href="https://prityaa379.github.io/practice/" target="_blank"><i class="fas fa-practise"></i></a>
-              <a href="https://prityaa379.github.io/rahulfc8/" target="_prity"><a>
-              <a href="https://prityaa379.github.io/rahulfc9/" target="_blank"><i class="fas fa-link"></i> Fitness Coach 10</a>
-            </div>
-          </div>
-          <a href="#"><i class="fas fa-laptop-code"></i> Web Development Projects</a>
-          <a href="#"><i class="fas fa-mobile-alt"></i> Mobile Apps</a>
-        </div>
-        <div class="mirror-reflection"></div>
-      </div>
-    </div>
-
     <!-- Gumroad Dropdown Section -->
     <div class="mirror-container">
       <div class="github-dropdown">
         <button class="github-dropbtn"><i class="fas fa-store"></i> Gumroad</button>
-        <a href="https://gumroad.com/discover" target="_blank"><i class="fab fa-gumroad"></i> Discover</a>
-      </div>
         <div class="github-dropdown-content">
           <div class="gumroad-submenu">
             <button class="gumroad-submenu-btn"><i class="fas fa-star"></i> Subscriptions <i class="fas fa-caret-down"></i></button>
@@ -1107,8 +1074,8 @@
           </div>
           <a href="https://gumroad.com/PRITYAA379" target="_blank"><i class="fas fa-store-alt"></i> Visit My Store</a>
         </div>
-        <div class="mirror-reflection"></div>
       </div>
+      <div class="mirror-reflection"></div>
     </div>
 
     <div class="mirror-container">
