--- a/index.html
+++ b/index.html
@@ -1072,8 +1072,7 @@
       <div class="fatloss-dropdown">
         <button class="fatloss-dropbtn"><i class="fas fa-weight"></i> Buy Fatloss Portal Now</button>
         <div class="fatloss-dropdown-content">
-          <a href="https://jagtappritam7.gumroad.com/l/fatloss-portal" target="_blank"><i class="fas fa-shopping-cart"></i> Purchase Now</a>
-          <!-- Add more links or details if needed -->
+          <a href="https://jagtappritam7.gumroad.com/l/onrle" target="_blank"><i class="fas fa-shopping-cart"></i> Purchase Now</a>
         </div>
       </div>
       <div class="mirror-reflection"></div>
