--- a/index.html
+++ b/index.html
@@ -31,6 +31,56 @@
       position: relative;
     }
 
+    /* Banner Section Styling */
+    .banner {
+      position: relative;
+      width: 100%;
+      max-width: 500px;
+      margin: 0 auto 30px;
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3), 0 0 15px var(--glow-color);
+      background: linear-gradient(135deg, var(--neon-pink), var(--glow-pink));
+      animation: neonGlow 8s ease infinite;
+      background-size: 800% 800%;
+    }
+
+    .banner::before {
+      content: '';
+      position: absolute;
+      top: -50%;
+      left: -50%;
+      width: 200%;
+      height: 200%;
+      background: linear-gradient(to bottom right,
+          rgba(255, 42, 141, 0) 0%,
+          rgba(255, 42, 141, 0) 45%,
+          rgba(255, 42, 141, 0.5) 50%,
+          rgba(255, 42, 141, 0) 55%,
+          rgba(255, 42, 141, 0) 100%);
+      transform: rotate(30deg);
+      animation: shine 3s infinite;
+    }
+
+    .banner iframe {
+      width: 100%;
+      height: 250px; /* Adjustable height for the video */
+      border: none;
+      border-radius: 12px;
+    }
+
+    .banner-title {
+      text-align: center;
+      padding: 10px 0;
+      font-size: 20px;
+      background: linear-gradient(to right, var(--neon-pink), var(--glow-pink));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+      margin-bottom: 10px;
+    }
+
+    /* Existing Styles (unchanged) */
     .profile-img-container {
       position: relative;
       width: 120px;
@@ -1064,8 +1114,15 @@
 </head>
 
 <body>
-  <!-- Visit My Website -->
+  <!-- Particles Background -->
   <div class="particles" id="particles"></div>
+
+  <!-- Banner Section with YouTube Video -->
+  <div class="banner">
+    <div class="banner-title">Featured Video</div>
+    <iframe src="https://www.youtube.com/embed/oZR5f1IirLI?si=inTxYibtpG1XaKyR" frameborder="0" allowfullscreen></iframe>
+  </div>
+
   <div class="container" id="main-container">
     <!-- New Fatloss Portal Dropdown -->
     <div class="mirror-container">
