--- a/index.html
+++ b/index.html
@@ -1119,7 +1119,7 @@
 
   <!-- Banner Section with YouTube Video -->
   <div class="banner">
-    <div class="banner-title">Featured Video</div>
+    <div class="banner-title">todays youtbe video</div>
     <iframe src="https://www.youtube.com/embed/oZR5f1IirLI?si=inTxYibtpG1XaKyR" frameborder="0" allowfullscreen></iframe>
   </div>
 
