--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       position: relative;
     }
 
-    /* Banner Section Styling */
+    /* Enhanced Banner Section Styling */
     .banner {
       position: relative;
       width: 100%;
@@ -39,10 +39,12 @@
       margin: 0 auto 30px;
       border-radius: 12px;
       overflow: hidden;
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3), 0 0 15px var(--glow-color);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4), 0 0 25px var(--glow-color);
       background: linear-gradient(135deg, var(--neon-pink), var(--glow-pink));
       animation: neonGlow 8s ease infinite;
       background-size: 800% 800%;
+      border: 2px solid var(--glow-pink);
+      padding: 10px;
     }
 
     .banner::before {
@@ -55,7 +57,7 @@
       background: linear-gradient(to bottom right,
           rgba(255, 42, 141, 0) 0%,
           rgba(255, 42, 141, 0) 45%,
-          rgba(255, 42, 141, 0.5) 50%,
+          rgba(255, 42, 141, 0.6) 50%,
           rgba(255, 42, 141, 0) 55%,
           rgba(255, 42, 141, 0) 100%);
       transform: rotate(30deg);
@@ -64,19 +66,32 @@
 
     .banner iframe {
       width: 100%;
-      height: 250px; /* Adjustable height for the video */
+      height: 280px; /* Increased height for better visibility */
       border: none;
-      border-radius: 12px;
+      border-radius: 8px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
     }
 
     .banner-title {
       text-align: center;
-      padding: 10px 0;
-      font-size: 20px;
+      padding: 15px 0;
+      font-size: 24px;
+      font-weight: bold;
       background: linear-gradient(to right, var(--neon-pink), var(--glow-pink));
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      text-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+      text-shadow: 0 3px 12px rgba(0, 0, 0, 0.3), 0 0 8px var(--glow-color);
+      margin-bottom: 10px;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+    }
+
+    .neon-strip {
+      width: 100%;
+      height: 8px;
+      background: linear-gradient(90deg, var(--neon-pink), var(--glow-pink));
+      box-shadow: 0 0 15px var(--glow-pink), 0 0 25px var(--neon-pink);
+      border-radius: 4px;
       margin-bottom: 10px;
     }
 
@@ -218,7 +233,7 @@
       height: 200%;
       background: linear-gradient(to bottom right,
           rgba(255, 42, 141, 0) 0%,
-          rgba(255, 42, 141, 0) 45%,
+          rgba(255, 42, 142, 0) 45%,
           rgba(255, 42, 141, 0.8) 50%,
           rgba(255, 42, 141, 0) 55%,
           rgba(255, 42, 141, 0) 100%);
@@ -255,7 +270,7 @@
     }
 
     .whatsapp-float:hover {
-      transform: scale(1.1) rotate(10deg);
+      transform: scale(1.1) rotate(10 ~~deg);
       box-shadow: 0 6px 25px rgba(0, 0, 0, 0.5),
         0 0 20px var(--glow-color);
     }
@@ -525,7 +540,7 @@
       bottom: -25px;
       left: 5%;
       transform: scaleY(-1);
-      opacity: 0.3;
+      opacity semanticLabel: "Reflection effect for links";
       background: linear-gradient(to bottom,
           var(--glow-color),
           rgba(255, 42, 141, 0));
@@ -547,7 +562,7 @@
       left: 0;
       transform: scaleY(-1);
       opacity: 0.3;
-      background: linear-gradient(to bottom,
+      background: linear-gradient(to-bottom,
           var(--glow-color),
           rgba(255, 42, 141, 0));
       -webkit-mask-image: linear-gradient(to bottom,
@@ -621,7 +636,7 @@
       height: 200%;
       background: linear-gradient(to bottom right,
           rgba(255, 42, 141, 0) 0%,
-          rgba(255, 42, 141, 0) 45%,
+          rgba(255, 42, 141, 0) 45%;
           rgba(255, 42, 141, 0.5) 50%,
           rgba(255, 42, 141, 0) 55%,
           rgba(255, 42, 141, 0) 100%);
@@ -1117,9 +1132,9 @@
   <!-- Particles Background -->
   <div class="particles" id="particles"></div>
 
-  <!-- Banner Section with YouTube Video -->
-  <div class="banner">
-    <div class="banner-title">todays youtbe video</div>
+  <!-- Horror-Themed Banner Section with YouTube Video -->
+  <div class="banner" style="background: #000000; border: 2px solid #8b0000; box-shadow: 0 8px 20px rgba(0,0,0,0.4), 0 0 25px rgba(139,0,0,0.6);">
+    <div class="banner-title" style="background: none; -webkit-text-fill-color: #fff5f8; text-shadow: 0 0 10px #8b0000, 0 0 20px rgba(139,0,0,0.6);">Understanding Human Behaviours with Machine Learning</div>
     <iframe src="https://www.youtube.com/embed/oZR5f1IirLI?si=inTxYibtpG1XaKyR" frameborder="0" allowfullscreen></iframe>
   </div>
 
