--- a/index.html
+++ b/index.html
@@ -147,6 +147,19 @@
       border-color: var(--accent-blue);
     }
 
+    /* Download Badge */
+    .download-badge {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background: var(--accent-blue);
+      color: var(--dark-bg);
+      padding: 5px 10px;
+      border-radius: 12px;
+      font-size: 12px;
+      font-weight: bold;
+    }
+
     /* Link Styles */
     .link {
       display: block;
@@ -737,6 +750,43 @@
   <div class="video-banner">
     <div class="video-title">Latest Video: Digital Transformation Insights</div>
     <iframe src="https://www.youtube.com/embed/6TUyU7f_394?si=Y1CGa762QIWIanAs" frameborder="0" allowfullscreen></iframe>
+  </div>
+
+  <!-- New Gumroad Products -->
+  <div class="section">
+    <div class="mirror-container">
+      <div class="card">
+        <div class="download-badge">1 Download</div>
+        <h3 class="service-title">
+          <i class="fas fa-question-circle service-icon"></i>
+          What is Gumroad?
+        </h3>
+        <p class="tagline">
+          A simple guide to understanding and starting your Gumroad journey
+        </p>
+        <a href="https://prityaa379.gumroad.com/l/uplaw" class="link" target="_blank">
+          <i class="fas fa-shopping-cart"></i> Get It Free
+        </a>
+      </div>
+      <div class="mirror-reflection"></div>
+    </div>
+
+    <div class="mirror-container">
+      <div class="card">
+        <div class="download-badge">1 Download</div>
+        <h3 class="service-title">
+          <i class="fas fa-download service-icon"></i>
+          Start Gumroad for Free
+        </h3>
+        <p class="tagline">
+          Turn your ideas into digital products with this free strategic guide
+        </p>
+        <a href="https://prityaa379.gumroad.com/l/pvoryz" class="link" target="_blank">
+          <i class="fas fa-shopping-cart"></i> Download Now
+        </a>
+      </div>
+      <div class="mirror-reflection"></div>
+    </div>
   </div>
 
   <!-- Promo Banner -->
