--- a/index.html
+++ b/index.html
@@ -2,159 +2,149 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DigitalConfVisions - Free Downloadable Product</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="title" content="DigitalConfVisions | ₹1Cr Simulation Web Pages">
+  <meta name="description" content="Subscribe to exclusive Gumroad guides, book coaching slots, and get simulation-based editable landing pages for free. Unlock digital luxury now.">
+  <meta name="keywords" content="Gumroad India, DigitalConfVisions, Landing Pages, Coach Selling, Simulation Pages, AI Wealth, Digital Assets">
+  <meta name="author" content="Pritam Jagtap">
+  <title>DigitalConfVisions | Luxury Simulated Pages</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', sans-serif;
-      scroll-behavior: smooth;
-    }
-
     body {
-      background: #020f0a;
-      color: white;
-      padding: 2rem;
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: #0a0a12;
+      color: #fff;
     }
 
     header {
       text-align: center;
-      margin-bottom: 2rem;
+      padding: 2rem;
+      background: #111;
     }
 
     header img {
-      width: 300px;
-      border-radius: 1rem;
-      box-shadow: 0 0 20px #00ffcc;
+      max-width: 280px;
+      border-radius: 12px;
+      border: 3px solid #22ffcc;
+      box-shadow: 0 0 20px #22ffcc55;
     }
 
-    .brand {
-      font-size: 2.5rem;
-      font-weight: bold;
+    h1 {
+      font-size: 2rem;
       margin-top: 1rem;
-      color: #00ffcc;
-      text-shadow: 0 0 10px #00ffcc;
+      color: #22ffcc;
     }
 
     section {
-      max-width: 800px;
-      margin: 2rem auto;
       padding: 2rem;
-      background: #031912;
-      border-radius: 1rem;
-      box-shadow: 0 0 20px #00ffcc3b;
+      border-bottom: 1px solid #333;
     }
 
-    h2 {
-      color: #00ffcc;
-      margin-bottom: 1rem;
-      text-shadow: 0 0 8px #00ffcc;
-    }
-
-    p {
-      margin-bottom: 1rem;
-      line-height: 1.6;
-    }
-
-    a.button {
+    .btn {
       display: inline-block;
-      padding: 0.8rem 1.5rem;
-      background: #00ffcc;
-      color: black;
-      font-weight: bold;
-      text-decoration: none;
-      border-radius: 10px;
       margin-top: 1rem;
-      box-shadow: 0 0 10px #00ffcc;
-    }
-
-    .socials {
-      text-align: center;
-      margin-top: 3rem;
-    }
-
-    .socials a {
-      margin: 0 1rem;
-      color: #00ffcc;
+      padding: 0.7rem 1.5rem;
+      background: #22ffcc;
+      color: #000;
       font-weight: bold;
+      border-radius: 8px;
       text-decoration: none;
-      display: inline-block;
+    }
+
+    .section-title {
+      font-size: 1.4rem;
+      margin-bottom: 1rem;
+      color: #ffcc00;
+    }
+
+    .box {
+      background: #111;
+      padding: 1.5rem;
+      border-radius: 12px;
+      margin: 1rem 0;
+      box-shadow: 0 0 10px #22ffcc33;
     }
 
     footer {
       text-align: center;
-      margin-top: 3rem;
+      padding: 2rem;
       font-size: 0.9rem;
-      color: #999;
+      background: #111;
+      color: #aaa;
     }
 
-    @media print {
-      body {
-        background: white;
-        color: black;
-      }
-      section {
-        background: white;
-        box-shadow: none;
-      }
+    .socials a {
+      margin: 0 0.5rem;
+      color: #22ffcc;
+      text-decoration: none;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
 
-  <header>
-    <a href="https://ibb.co/YTjVP153">
-      <img src="https://i.ibb.co/4gN0KXb7/Facebook-Post-Luxury-Link-in-Bio-Pages-1.jpg" alt="Your Image" />
-    </a>
-    <div class="brand">DigitalConfVisions</div>
-  </header>
+<header>
+  <img src="https://i.ibb.co/4gN0KXb7/Facebook-Post-Luxury-Link-in-Bio-Pages-1.jpg" alt="Pritam Jagtap">
+  <h1><strong>DigitalConfVisions™</strong><br> Build Your ₹1 Cr Simulation-Based Web Empire</h1>
+</header>
 
-  <section>
-    <h2>✨ Free for Lifetime</h2>
-    <p>Yo! This is a fully editable, scroll-based, A4 layout web page you can use as a product, lead magnet, or digital drop. It's absolutely FREE — forever. No cap. You get the full code, design, and all sections.</p>
-  </section>
+<section>
+  <div class="section-title">🚀 Gumroad Starter: Become a Digital Seller</div>
+  <p>Start your first product journey with this prebuilt Gumroad page. Free, editable, and mobile-optimized.</p>
+  <a href="https://prityaa379.gumroad.com/l/pvoryz" class="btn" target="_blank">Get Free Product Page</a>
+</section>
 
-  <section>
-    <h2>🧠 You Will Learn</h2>
-    <p>Welcome to the realest IG in the game. Here, you’ll unlock what real sex, energy exchange, and emotional alignment is — no nudity, just pure ancient vibe and modern clarity. Learn how to be mindful in your body and use your sexual energy consciously.</p>
-  </section>
+<section>
+  <div class="section-title">📅 Book 1-on-1 With Me</div>
+  <p>Let’s talk about how to build your ₹1 Cr digital setup or how you can sell simulation pages to coaches.</p>
+  <a href="https://calendly.com/jagtappritam73/book-your-slot" class="btn" target="_blank">Book Your Slot Now</a>
+</section>
 
-  <section>
-    <h2>📅 Book 1:1 With Me</h2>
-    <p>Wanna collab, launch your own digital brand, or get mentored? Book your private slot now 👇</p>
-    <a class="button" href="https://calendly.com/jagtappritam73/book-your-slot" target="_blank">Book Event with Jagtap</a>
-  </section>
+<section>
+  <div class="section-title">🔥 Why Subscribe to My Gumroad?</div>
+  <ul>
+    <li>Access exclusive simulation assets & AI-based landing pages</li>
+    <li>Premium templates, PDFs, and codes – all mobile-ready</li>
+    <li>Get notified about zero-to-crore digital asset workshops</li>
+  </ul>
+  <a href="https://prityaa379.gumroad.com" class="btn" target="_blank">Subscribe Now</a>
+</section>
 
-  <section>
-    <h2>🚀 Gumroad Starter Pack</h2>
-    <p>Want to launch a product like this and earn? I’ve already created the starter for you. Just edit + upload + sell.</p>
-    <a class="button" href="https://prityaa379.gumroad.com/l/pvoryz" target="_blank">Get Gumroad Starter</a>
-  </section>
+<section>
+  <div class="section-title">🧠 Learn What Real Sex & Mindfulness Is</div>
+  <p>We explore deep healing, presence, emotional energy & feminine psychology through clean, non-nude content. Follow for trauma-informed insights.</p>
+  <a href="https://instagram.com/prityaa379" class="btn" target="_blank">Follow on Instagram</a>
+</section>
 
-  <section>
-    <h2>🛠️ Download & Edit This Page</h2>
-    <p>This page is 100% editable. Download the full HTML and make it your own. Add your story, visuals, videos, CTA — everything. Sell it to your niche (coaches, influencers, educators) as their own digital front page.</p>
-    <a class="button" href="https://prityaa379.gumroad.com/l/pvoryz" target="_blank">Download Full Page</a>
-  </section>
-
-  <section>
-    <h2>💼 Sell Pages Like This to Coaches</h2>
-    <p>Coaches and creators need digital presence, fast. Offer these pages as custom branding tools. Change title, color, image — charge ₹499 to ₹4999. It’s a digital service that prints cash. Build for them, show sample, get paid.</p>
-  </section>
-
-  <div class="socials">
-    <h2>🌐 Follow Me</h2>
-    <a href="https://www.instagram.com/prityaa379" target="_blank">Instagram</a>
-    <a href="https://prityaa379.gumroad.com" target="_blank">Gumroad</a>
-    <a href="https://www.linkedin.com/in/pritam-jagtap" target="_blank">LinkedIn</a>
-    <a href="https://twitter.com/prityaa379" target="_blank">Twitter</a>
-    <a href="https://www.youtube.com/@prityaa379" target="_blank">YouTube</a>
+<section>
+  <div class="section-title">💸 Sell This Page Type to Coaches</div>
+  <div class="box">
+    <p>Simulation-based pages like this can sell for ₹5,000 – ₹25,000 per landing page.</p>
+    <p>Target coaches in wellness, education, finance, or sex-ed space. Customize layout, content & collect payment using Razorpay or Gumroad.</p>
   </div>
+</section>
 
-  <footer>
-    Made with 🔥 by Pritam Jagtap | DigitalConfVisions™ | Feel free to duplicate and share.
-  </footer>
+<section>
+  <div class="section-title">💾 Download & Edit This Page Free</div>
+  <p>Yup, no gatekeeping. Copy-paste this full HTML, edit your links, sell it or use it to build your own brand presence.</p>
+  <a href="#" class="btn">Copy Full HTML Code</a>
+</section>
+
+<section>
+  <div class="section-title">🔗 Connect With Me</div>
+  <div class="socials">
+    <a href="https://instagram.com/prityaa379" target="_blank">Instagram</a> |
+    <a href="https://www.linkedin.com/in/pritamjagtap" target="_blank">LinkedIn</a> |
+    <a href="https://twitter.com/prityaa379" target="_blank">Twitter/X</a> |
+    <a href="https://youtube.com/@prityaa379" target="_blank">YouTube</a> |
+    <a href="https://prityaa379.gumroad.com" target="_blank">Gumroad</a>
+  </div>
+</section>
+
+<footer>
+  Built with 💻 by <strong>Pritam Jagtap</strong> | Simulation-Based Products for New India.<br>
+  No expiry – Free for life.
+</footer>
 
 </body>
 </html>
