--- a/index.html
+++ b/index.html
@@ -2,149 +2,142 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="title" content="DigitalConfVisions | ₹1Cr Simulation Web Pages">
-  <meta name="description" content="Subscribe to exclusive Gumroad guides, book coaching slots, and get simulation-based editable landing pages for free. Unlock digital luxury now.">
-  <meta name="keywords" content="Gumroad India, DigitalConfVisions, Landing Pages, Coach Selling, Simulation Pages, AI Wealth, Digital Assets">
-  <meta name="author" content="Pritam Jagtap">
-  <title>DigitalConfVisions | Luxury Simulated Pages</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>DigitalConfVisions – Immersive Web Bio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    body {
+    :root {
+      --bg: #0a0a12;
+      --glow: #00ffe7;
+      --accent: #ff0080;
+    }
+
+    * {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: #0a0a12;
-      color: #fff;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Orbitron', sans-serif;
     }
 
-    header {
+    body {
+      background: var(--bg);
+      color: white;
+      overflow-x: hidden;
       text-align: center;
-      padding: 2rem;
-      background: #111;
     }
 
-    header img {
-      max-width: 280px;
-      border-radius: 12px;
-      border: 3px solid #22ffcc;
-      box-shadow: 0 0 20px #22ffcc55;
-    }
-
-    h1 {
-      font-size: 2rem;
-      margin-top: 1rem;
-      color: #22ffcc;
+    h1, h2, h3 {
+      margin-bottom: 1rem;
+      text-shadow: 0 0 5px var(--glow), 0 0 10px var(--accent);
     }
 
     section {
-      padding: 2rem;
-      border-bottom: 1px solid #333;
+      padding: 3rem 1rem;
+      border-bottom: 2px solid rgba(255, 255, 255, 0.1);
+      position: relative;
     }
 
-    .btn {
+    .glitch-text {
+      animation: melt 2s infinite alternate ease-in-out;
+      font-size: 2rem;
       display: inline-block;
-      margin-top: 1rem;
-      padding: 0.7rem 1.5rem;
-      background: #22ffcc;
-      color: #000;
-      font-weight: bold;
-      border-radius: 8px;
-      text-decoration: none;
     }
 
-    .section-title {
-      font-size: 1.4rem;
-      margin-bottom: 1rem;
-      color: #ffcc00;
+    @keyframes melt {
+      0% {
+        transform: scale(1) translateY(0);
+      }
+      100% {
+        transform: scale(1.05) translateY(5px) skewY(2deg);
+        filter: blur(1px);
+      }
     }
 
-    .box {
-      background: #111;
-      padding: 1.5rem;
+    .floating-box {
+      background: rgba(255, 255, 255, 0.05);
+      backdrop-filter: blur(10px);
       border-radius: 12px;
-      margin: 1rem 0;
-      box-shadow: 0 0 10px #22ffcc33;
+      padding: 1.5rem;
+      margin: 1rem auto;
+      width: 80%;
+      max-width: 500px;
+      border: 1px solid var(--glow);
+      animation: float 3s ease-in-out infinite;
+    }
+
+    @keyframes float {
+      0% {
+        transform: translateY(0px);
+      }
+      50% {
+        transform: translateY(-15px);
+      }
+      100% {
+        transform: translateY(0px);
+      }
+    }
+
+    a {
+      color: var(--glow);
+      text-decoration: none;
     }
 
     footer {
-      text-align: center;
       padding: 2rem;
-      font-size: 0.9rem;
-      background: #111;
+      font-size: 0.8rem;
       color: #aaa;
-    }
-
-    .socials a {
-      margin: 0 0.5rem;
-      color: #22ffcc;
-      text-decoration: none;
-      font-weight: bold;
     }
   </style>
 </head>
 <body>
+  <section>
+    <img src="https://i.ibb.co/4gN0KXb7/Facebook-Post-Luxury-Link-in-Bio-Pages-1.jpg" alt="Pritam Jagtap">
+    <h1 class="glitch-text">DigitalConfVisions</h1>
+    <div class="floating-box">
+      <p>🚀 Welcome to my immersive digital bio page – where every section flows like water and glows with intention.</p>
+    </div>
+  </section>
 
-<header>
-  <img src="https://i.ibb.co/4gN0KXb7/Facebook-Post-Luxury-Link-in-Bio-Pages-1.jpg" alt="Pritam Jagtap">
-  <h1><strong>DigitalConfVisions™</strong><br> Build Your ₹1 Cr Simulation-Based Web Empire</h1>
-</header>
+  <section>
+    <h2 class="glitch-text">What You’ll Learn Here</h2>
+    <div class="floating-box">🌐 How to create luxury link-in-bio pages using free tools</div>
+    <div class="floating-box">🧠 Understand what is real sex and mindfulness (no nudity, just clarity)</div>
+    <div class="floating-box">🛠 How to sell these web experiences to coaches</div>
+    <div class="floating-box">📲 How to edit and share these immersive pages</div>
+  </section>
 
-<section>
-  <div class="section-title">🚀 Gumroad Starter: Become a Digital Seller</div>
-  <p>Start your first product journey with this prebuilt Gumroad page. Free, editable, and mobile-optimized.</p>
-  <a href="https://prityaa379.gumroad.com/l/pvoryz" class="btn" target="_blank">Get Free Product Page</a>
-</section>
+  <section>
+    <h2 class="glitch-text">Explore Now</h2>
+    <div class="floating-box">
+      🔗 <a href="https://prityaa379.gumroad.com/l/pvoryz">Gumroad Starter Pack</a> – Download and Edit Free
+    </div>
+    <div class="floating-box">
+      📅 <a href="https://calendly.com/jagtappritam73/book-your-slot">Book Your 1-on-1 Slot with Me</a>
+    </div>
+  </section>
 
-<section>
-  <div class="section-title">📅 Book 1-on-1 With Me</div>
-  <p>Let’s talk about how to build your ₹1 Cr digital setup or how you can sell simulation pages to coaches.</p>
-  <a href="https://calendly.com/jagtappritam73/book-your-slot" class="btn" target="_blank">Book Your Slot Now</a>
-</section>
+  <section>
+    <h2 class="glitch-text">Why Subscribe to My Gumroad?</h2>
+    <div class="floating-box">
+      🌟 Get early access to 1 Cr+ value products<br>
+      ✨ Personal tools to make ₹10L/month digitally<br>
+      🎯 No BS, only real digital assets that convert
+    </div>
+  </section>
 
-<section>
-  <div class="section-title">🔥 Why Subscribe to My Gumroad?</div>
-  <ul>
-    <li>Access exclusive simulation assets & AI-based landing pages</li>
-    <li>Premium templates, PDFs, and codes – all mobile-ready</li>
-    <li>Get notified about zero-to-crore digital asset workshops</li>
-  </ul>
-  <a href="https://prityaa379.gumroad.com" class="btn" target="_blank">Subscribe Now</a>
-</section>
+  <section>
+    <h2 class="glitch-text">Connect With Me</h2>
+    <div class="floating-box">
+      🔗 <a href="https://www.linkedin.com/in/pritam-jagtap-00010b216">LinkedIn (Pritam Jagtap)</a><br>
+      📸 <a href="https://www.instagram.com/prityaa379">Instagram</a><br>
+      🧵 <a href="https://x.com/prityaa379">Twitter/X</a><br>
+      🎥 <a href="https://youtube.com/@prityaa379">YouTube</a><br>
+      📎 <a href="https://prityaa379.gumroad.com">Gumroad</a>
+    </div>
+  </section>
 
-<section>
-  <div class="section-title">🧠 Learn What Real Sex & Mindfulness Is</div>
-  <p>We explore deep healing, presence, emotional energy & feminine psychology through clean, non-nude content. Follow for trauma-informed insights.</p>
-  <a href="https://instagram.com/prityaa379" class="btn" target="_blank">Follow on Instagram</a>
-</section>
-
-<section>
-  <div class="section-title">💸 Sell This Page Type to Coaches</div>
-  <div class="box">
-    <p>Simulation-based pages like this can sell for ₹5,000 – ₹25,000 per landing page.</p>
-    <p>Target coaches in wellness, education, finance, or sex-ed space. Customize layout, content & collect payment using Razorpay or Gumroad.</p>
-  </div>
-</section>
-
-<section>
-  <div class="section-title">💾 Download & Edit This Page Free</div>
-  <p>Yup, no gatekeeping. Copy-paste this full HTML, edit your links, sell it or use it to build your own brand presence.</p>
-  <a href="#" class="btn">Copy Full HTML Code</a>
-</section>
-
-<section>
-  <div class="section-title">🔗 Connect With Me</div>
-  <div class="socials">
-    <a href="https://instagram.com/prityaa379" target="_blank">Instagram</a> |
-    <a href="https://www.linkedin.com/in/pritamjagtap" target="_blank">LinkedIn</a> |
-    <a href="https://twitter.com/prityaa379" target="_blank">Twitter/X</a> |
-    <a href="https://youtube.com/@prityaa379" target="_blank">YouTube</a> |
-    <a href="https://prityaa379.gumroad.com" target="_blank">Gumroad</a>
-  </div>
-</section>
-
-<footer>
-  Built with 💻 by <strong>Pritam Jagtap</strong> | Simulation-Based Products for New India.<br>
-  No expiry – Free for life.
-</footer>
-
+  <footer>
+    <p>© 2025 Pritam Jagtap | Building India’s Simulation Economy | Powered by DigitalConfVisions™</p>
+  </footer>
 </body>
 </html>
