--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Neon Knowledge Scroll</title>
+  <title>Scroll to Unlock Knowledge</title>
   <style>
     * {
       margin: 0;
@@ -12,109 +12,141 @@
     }
 
     body {
-      background-color: #000;
       font-family: 'Segoe UI', sans-serif;
-      overflow-x: auto;
+      overflow-x: scroll;
       overflow-y: hidden;
-      white-space: nowrap;
-      scroll-behavior: smooth;
+      background-color: #000;
+      color: #fff;
+      height: 100vh;
+      display: flex;
     }
 
-    .top-strip {
+    .neon-strip {
       position: fixed;
       top: 0;
       left: 0;
-      width: 100%;
-      padding: 10px 0;
-      text-align: center;
-      font-size: 18px;
-      font-weight: bold;
-      background: rgba(0, 0, 0, 0.7);
-      color: #fff;
-      z-index: 1000;
-      text-shadow: 0 0 10px #0ff, 0 0 20px #0ff, 0 0 30px #0ff;
-      border-bottom: 2px solid #0ff;
-    }
-
-    .scroll-container {
-      display: flex;
-      height: 100vh;
-      padding-top: 50px;
-    }
-
-    .page {
-      flex: none;
       width: 100vw;
-      height: 100%;
-      padding: 40px;
+      padding: 12px 0;
+      text-align: center;
+      background: linear-gradient(90deg, #00f5ff, #ff00c8, #00f5ff);
+      color: #fff;
+      font-weight: bold;
+      font-size: 18px;
+      z-index: 999;
+      box-shadow: 0 0 10px #00f5ff, 0 0 20px #ff00c8;
+      animation: glow 2s infinite linear;
+    }
+
+    @keyframes glow {
+      0% { background-position: 0% }
+      100% { background-position: 100% }
+    }
+
+    .scroll-section {
+      display: flex;
+      width: 300vw;
+      height: 100vh;
       position: relative;
     }
 
-    .black-paper {
-      background: rgba(0, 0, 0, 0.7);
-      border: 2px solid #00f7ff;
-      border-radius: 12px;
-      padding: 40px;
-      color: #fff;
-      width: 80%;
-      margin: auto;
-      text-align: left;
-      text-shadow: 0 0 10px #0ff;
+    .panel {
+      flex: 0 0 100vw;
+      height: 100vh;
+      padding: 100px 40px 40px;
+      position: relative;
     }
 
-    .checkbox-area {
+    .black-overlay {
+      background-color: rgba(0,0,0,0.8);
+      padding: 20px;
+      border-radius: 20px;
+      box-shadow: 0 0 20px #111;
+    }
+
+    .image-box {
+      max-width: 300px;
+      margin: 20px auto;
+      display: block;
+      border-radius: 10px;
+      box-shadow: 0 0 10px #fff3;
+    }
+
+    .buy-button {
+      display: inline-block;
       margin-top: 20px;
-      font-size: 16px;
+      padding: 12px 24px;
+      background-color: #00f5ff;
+      color: #000;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 8px;
+      box-shadow: 0 0 10px #00f5ff;
+      transition: 0.3s;
     }
 
-    .checkbox-area input {
-      margin-right: 10px;
-      transform: scale(1.3);
+    .buy-button:hover {
+      background-color: #00c9cc;
     }
 
-    @media (max-width: 768px) {
-      .black-paper {
-        width: 90%;
-        padding: 30px;
-      }
+    .privacy-box {
+      margin-top: 20px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .privacy-box input[type="checkbox"] {
+      transform: scale(1.4);
+    }
+
+    .privacy-box label {
+      font-size: 14px;
+      max-width: 80%;
     }
   </style>
 </head>
 <body>
 
-  <div class="top-strip">
-    👉 Scroll right to download and read knowledge
-  </div>
+  <!-- Neon Header -->
+  <div class="neon-strip">⬅️ Scroll Right to Download & Read ✨ Knowledge Awaits</div>
 
-  <div class="scroll-container">
-    <!-- Page 1 -->
-    <section class="page">
-      <div class="black-paper">
-        <h1>📖 Welcome to the Simulation</h1>
-        <p>
-          You’re not just scrolling a website; you’re unlocking levels of inner & outer knowledge. This space contains curated digital scrolls for the curious mind. Engage with it, feel the words vibrate through your thoughts, and prepare to activate your next version.
-        </p>
-        <div class="checkbox-area">
-          <label>
-            <input type="checkbox" id="privacyCheck" />
-            I accept the Privacy Policy
-          </label>
+  <!-- Scrollable Panels -->
+  <div class="scroll-section">
+
+    <!-- Panel 1: Intro -->
+    <div class="panel">
+      <div class="black-overlay">
+        <h1>🚀 Welcome to Your Digital Knowledge Portal</h1>
+        <p>Here, you unlock power-packed insights curated to help you grow in the digital world. Scroll right to discover.</p>
+        <img class="image-box" src="https://i.ibb.co/nsRbTz4d/IMG-1396.jpg" alt="Your Photo"/>
+      </div>
+    </div>
+
+    <!-- Panel 2: Book Display -->
+    <div class="panel">
+      <div class="black-overlay">
+        <h2>📘 Featured Book:</h2>
+        <p><strong>Actionable Guide To Digital Marketing For Beginners</strong></p>
+        <img class="image-box" src="https://i.ibb.co/jPSDTcMy/51-WGz3rkb-HL-SL1000.jpg" alt="Book Cover"/>
+        <a class="buy-button" href="https://www.amazon.in/Actionable-Guide-Digital-Marketing-Beginners-ebook/dp/B0DZV2BTN9" target="_blank">Buy on Amazon</a>
+      </div>
+    </div>
+
+    <!-- Panel 3: Privacy & Consent -->
+    <div class="panel">
+      <div class="black-overlay">
+        <h2>✅ Privacy Policy</h2>
+        <p>By checking the box below, you agree to receive personalized promotional messages, offers, and updates related to your digital interests. You can unsubscribe anytime.</p>
+
+        <div class="privacy-box">
+          <input type="checkbox" id="privacy" name="privacy" />
+          <label for="privacy">I accept the privacy policy and agree to receive promotional messages based on my interest.</label>
         </div>
-      </div>
-    </section>
 
-    <!-- Page 2 -->
-    <section class="page">
-      <div class="black-paper">
-        <h2>🔓 Chapter Unlocked</h2>
-        <p>
-          You've just accessed a realm where ideas breathe and boundaries vanish. Scroll further to discover immersive content crafted to elevate your awareness and unlock your potential.
-        </p>
-        <p>
-          Once you're done reading, new sections will be revealed to download, apply, and embody this wisdom into real digital actions.
-        </p>
+        <p style="margin-top: 20px; font-size: 13px; color: #aaa;">This digital platform respects your privacy. Your info will not be shared or sold to third parties.</p>
       </div>
-    </section>
+    </div>
+
   </div>
 
 </body>
